# city-builder

./: CMakeLists.txt  main.cc  vcpkg.json
Core/: CMakeLists.txt
Core/include/maths/: basic_vector.h  queue.h  small_vector.h  stack.h  vec2f.h  vec2i.h  vector.h
Core/test/: test_queue.cc  test_stack.cc  test_vec2f.cc  test_vec2i.cc  test_vector.cc
api/: CMakeLists.txt
api/include/: sfml_vec2f.h
api/include/bt_tree/: bt_leaf.h  bt_node.h  bt_selector.h  bt_sequence.h  bt_tree.h
api/include/gameplay/: building.h  building_manager.h  change_cursor.h  house.h  mill.h  selected_Tiles.h  stones_man.h  walker.h  woods_man.h
api/include/graphics/: Tile.h  sprite_entity.h  tilemap.h
api/include/pathfinding/: path.h  path_finder.h
api/include/resources/: ResourcesManager.h
api/include/ui/: ui_button.h
api/src/bt_tree/: bt_node.cc  bt_tree.cc
api/src/gameplay/: building.cc  building_manager.cc  house.cc  mill.cc  selected_Tiles.cc  stones_man.cc  walker.cc  woods_man.cc
api/src/graphics/: Tile.cc  sprite_entity.cc  tilemap.cc
api/src/pathfinding/: path.cc  path_finder.cc
api/src/resources/: ResourcesManager.cc
api/src/ui/: ui_button.cc
